# recipe-api/routes/index.js
@@ -5,21 +5,30 @@ const passport = require("passport");
 router.use("/recipes", require("./recipesRoute"));
 router.use("/users", require("./usersRoute"));
 
+/* #swagger.tags = ['Auth']
+   #swagger.summary = 'GitHub Login'
+*/
 router.get(
     '/login',
     passport.authenticate('github'),
     (req, res) => { });
 
-//router.get(
-  //'/github/callback',
-  //passport.authenticate('github', {
-   // failureRedirect: '/login'
- // }),
-  //(req, res) => {
-  //  res.redirect('/api-docs');
-  //}
-//);
+/* #swagger.tags = ['Auth']
+   #swagger.summary = 'GitHub Callback'
+*/
+router.get(
+  '/github/callback',
+  passport.authenticate('github', {
+    failureRedirect: '/login'
+  }),
+  (req, res) => {
+    res.redirect('/api-docs');
+  }
+);
 
+/* #swagger.tags = ['Auth']
+   #swagger.summary = 'Logout user'
+*/
 router.get('/logout', (req, res, next) => {
   req.logout((err) => {
     if (err) {
